--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -10,7 +10,7 @@ options:
   max-warnings: 50
 # File Options
 files:
-  include: 'app/assets/stylesheets/**/*.s+(a|c)ss'
+  include: 'source/assets/stylesheets/**/*.s+(a|c)ss'
   ignore:
     - 'vendor/**/*.*'
 # Rule Configuration
